# esp32

./: .gitignore  CLAUDE.md  deploy.sh  setup.sh
camera/: app.py  autofocus.py  autofocus_model.safetensors  requirements.txt  snapshot.sh
deploy/: esp-camera.service  esp.tinymachines.ai.nginx  install.sh
docs/: RESOURCES.md  VERSION2.md  esp32-c6-architecture.html  esp32-c6-cpu-arch.html  esp32-c6-cpu-architecture.md  esp32-c6-linux-cheatsheet.md  esp32-c6-rust-complete-guide.md  flash-partitions.md  kit-inventory.md  oled-assembly-walkthrough.md  oled-explainer.md  wifi-explainer.md
docs/life/: Cargo.toml  lib.rs  main.rs
esp32c6-hello/: Cargo.toml  README.md  partitions.csv  sdkconfig.defaults
esp32c6-hello/.cargo/: config.toml
esp32c6-hello/src/: main.rs
www/: index.html  server.py
